manifests/3-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: corner
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: corner
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo  
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.2.8
        ports:
        - containerPort: 27017
        resources:
          limits:
            memory: 500Mi
            cpu: 400m
          requests:
            memory: 500Mi
            cpu: 200m  
        volumeMounts:
        - name: mongo-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 10Gi
