manifests/4-web.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: corner
  namespace: corner
spec:
  rules:
  - host: sventi.com
    http:
      paths:
      - backend:
          serviceName: corner
          servicePort: 80
  tls:
  - hosts:
    - sventi.com
    secretName: corner-tls
---
apiVersion: v1
kind: Service
metadata:
  name: corner
  namespace: corner
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: corner
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: corner
  namespace: corner
  labels:
    app: corner
spec:
  selector:
    matchLabels:
      app: corner
  serviceName: corner  
  template:
    metadata:
      labels:
        app: corner
    spec:
      containers:
      - name: corner
        image: docker.pkg.github.com/sventi555/corner/corner:1.0.8-alpha
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 500Mi
            cpu: 400m
          requests:
            memory: 500Mi
            cpu: 200m  
        volumeMounts:
        - name: corner-media
          mountPath: /usr/src/app/media
      imagePullSecrets:
      - name: github-pkg-reg-creds
  volumeClaimTemplates:
  - metadata:
      name: corner-media
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 10Gi
